Add Samosa in recipes

--- a/recipes/baked-samosa.html
+++ b/recipes/baked-samosa.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="./recipes/baked-samosa.html">Simple Baked Samosa</a>
+    <h1>Simple Baked Samosa</h1>
 </body>
 </html>
