--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/baked-samosa.html">Simple Baked Samosa</a>
+
+    <h2>Recipes</h2>
+    <ul>
+    <li><a href="./recipes/baked-samosa.html">Simple Baked Samosa</a></li>
+    <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+    </ul>
+
 </body>
 </html>
