--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul>
     <li><a href="./recipes/baked-samosa.html">Simple Baked Samosa</a></li>
     <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+    <li><a href="./recipes/vanilla-icecream.html">Vanilla Ice-cream</a></li>
     </ul>
 
 </body>
